[package]
name = "treedoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
