[package]
name = "treedoc"
version = "0.1.0"
edition = "2021"
description = "A tree(1)-style directory listing with comments from a YAML sidecar."
license = "MIT"
repository = "https://github.com/kukv/treedoc"
homepage = "https://github.com/kukv/treedoc"
readme = "README.md"
keywords = ["tree", "cli", "documentation", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
